--- a/Pro.manette/platformio.ini
+++ b/Pro.manette/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = nrf24/RF24@^1.4.11
+lib_deps = 
+	nrf24/RF24@^1.4.11
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
